fix components not showing properly on mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -49,5 +49,6 @@ code {
   .bottomContainer {
     display: flex;
     position: relative;
+    margin-top: 5px;
   }
 }
