--- a/src/components/layout/SideNavigation.module.css
+++ b/src/components/layout/SideNavigation.module.css
@@ -35,7 +35,6 @@
 .absolute-nav {
   position: absolute;
   z-index: 999;
-  transition: position 4s ease;
   box-shadow: -4px 6px 6px 4px #707273b0;
 }
 
