--- a/src/components/ui-components/SearchBar.module.css
+++ b/src/components/ui-components/SearchBar.module.css
@@ -27,11 +27,10 @@
 
 .searchResultsContainer {
   background-color: #f2f6fd;
-  border-radius: 0 0 4px 4px;
-  padding-inline-start: 0;
-  margin: 0 !important;
+  border-radius: 0 0 5px 5px;
   position: absolute;
   width: 200px;
+  z-index: 99;
 }
 
 .searchBarResultsActive {
@@ -48,9 +47,10 @@
 }
 
 .searchResultItem:hover {
-  background-color: #1a2b3426;
+  background-color: #c3d5f4;
   cursor: pointer;
   border-radius: 0;
+  transition: background-color 0.5s ease;
 }
 
 @media only screen and (max-width: 450px) {
